# brainmaze-eeg

./: .buildinfo  .gitignore  README.rst  brainmaze_eeg.html  classifiers.html  crp.html  features.dataset.html  features.feature_extraction.html  features.html  features.spectral_features.html  features.time_domain_features.html  features.utils.html  features.wave_detector.html  genindex.html  hypnogram.html  index.html  objects.inv  preprocessing.html  project_wave_detector.html  py-modindex.html  pyproject.toml  rdm.html  scikit_modules.html  search.html  searchindex.js
.doctrees/: brainmaze_eeg.doctree  classifiers.doctree  crp.doctree  environment.pickle  features.dataset.doctree  features.doctree  features.feature_extraction.doctree  features.spectral_features.doctree  features.time_domain_features.doctree  features.utils.doctree  features.wave_detector.doctree  hypnogram.doctree  index.doctree  preprocessing.doctree  project_wave_detector.doctree  rdm.doctree  scikit_modules.doctree
.github/workflows/: ci.yml  test_publish.yml
_sources/: project_wave_detector.rst
brainmaze_eeg/: __init__.py  classifiers.py  crp.py  hypnogram.py  preprocessing.py  scikit_modules.py
brainmaze_eeg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brainmaze_eeg/features/: feature_extraction.py  spectral_features.py  time_domain_features.py  wave_detector.py
brainmaze_eeg/spikes/: README.md  __init__.py  barkmeier.py  janca.py
brainmaze_eeg/tests/: test_classifiers.py  test_crp.py  test_numpy_compatibility.py  test_preprocessing.py  test_scikit_modules.py  test_spectral_features.py  test_spikes_barkmeier.py  test_spikes_janca.py  test_time_domain_features.py  test_wave_detector.py
demo/eeg_wave_detection/: example_one_file.py
docs_src/: requirements.txt
(+2 files in other folders)
